[package]
name = "zomboid-server-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["rustls-tls","json"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_derive = "1.0.188"
serde_yaml = "0.9"
serde_json = "1.0.107"
rust-ini = "0.20.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
async-mutex = "1.4.0"
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.10.2"
clap = { version = "4.4.11", features = ["derive"] }
#openssl = { version = "0.10", features = ["vendored"] }